Fixing footer not sitting on bottom on hp, fixing hero image overflow on Maavens page

--- a/app/assets/stylesheets/layouts/_containers.scss
+++ b/app/assets/stylesheets/layouts/_containers.scss
@@ -6,3 +6,8 @@
 .project-details-container {
 	padding-bottom: 100px;
 }
+
+.block-image-overflow {
+	width: 100%;
+	overflow: hidden;
+}
