--- a/app/assets/stylesheets/pages/_projects.scss
+++ b/app/assets/stylesheets/pages/_projects.scss
@@ -7,6 +7,7 @@
 		width: 100%;
 		height: 100vh;
 		object-fit: cover;
+		pointer-events: none;
 	}
 }
 
